This is another change i've done

--- a/csv_notebook.ipynb
+++ b/csv_notebook.ipynb
@@ -2,7 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "task 1 ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,14 +116,12 @@
        "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "df = pd.read_csv(\"./Sales_Data/Sales_April_2019.csv\")\n",
     "df.head()"
    ]
