--- a/csv_notebook.ipynb
+++ b/csv_notebook.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "task 1 ..."
+    "Task 1. Let's merge the 12 months of sales data into a single csv file"
    ]
   },
   {
