Attempting to add additional columns

--- a/csv_notebook.ipynb
+++ b/csv_notebook.ipynb
@@ -1,24 +1,65 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# Sales Analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 1. Let's merge the 12 months of sales data into a single csv file"
+    "#### Import Necessary Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task 1. Let's merge the 12 months of sales data into a single csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"./Sales_Data/Sales_April_2019.csv\")\n",
+    "\n",
+    "files = [file for file in os.listdir('./Sales_Data')]\n",
+    "\n",
+    "all_months_data = pd.DataFrame()\n",
+    "\n",
+    "for file in files:\n",
+    "    df = pd.read_csv(\"./Sales_Data/\"+file)\n",
+    "    all_months_data = pd.concat([all_months_data, df])\n",
+    "\n",
+    "all_months_data.to_csv(\"all_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Read in updated dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -116,14 +157,56 @@
        "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./Sales_Data/Sales_April_2019.csv\")\n",
-    "df.head()"
+    "all_data = pd.read_csv(\"all_data.csv\")\n",
+    "all_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Augment data with additional columns "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task2: Add Month Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Q1 - What was the best month for sales? How much was earned that month?"
    ]
   }
  ],
