--- a/csv_notebook.ipynb
+++ b/csv_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,6 +165,149 @@
    "source": [
     "all_data = pd.read_csv(\"all_data.csv\")\n",
     "all_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clean up the data\n",
+    "##### we got a ValueError: cannot convert float NaN to integer (from first three lines of code in Task 2), so we need to clean data \n",
+    "\n",
+    "#### Drop rows of NAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>176558</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>04/19/19 08:46</td>\n",
+       "      <td>917 1st St, Dallas, TX 75001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>176559</td>\n",
+       "      <td>Bose SoundSport Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>04/07/19 22:30</td>\n",
+       "      <td>682 Chestnut St, Boston, MA 02215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>176560</td>\n",
+       "      <td>Google Phone</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600</td>\n",
+       "      <td>04/12/19 14:38</td>\n",
+       "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>176560</td>\n",
+       "      <td>Wired Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>04/12/19 14:38</td>\n",
+       "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>176561</td>\n",
+       "      <td>Wired Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>04/30/19 09:27</td>\n",
+       "      <td>333 8th St, Los Angeles, CA 90001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order ID                     Product Quantity Ordered Price Each  \\\n",
+       "0   176558        USB-C Charging Cable                2      11.95   \n",
+       "2   176559  Bose SoundSport Headphones                1      99.99   \n",
+       "3   176560                Google Phone                1        600   \n",
+       "4   176560            Wired Headphones                1      11.99   \n",
+       "5   176561            Wired Headphones                1      11.99   \n",
+       "\n",
+       "       Order Date                      Purchase Address  \n",
+       "0  04/19/19 08:46          917 1st St, Dallas, TX 75001  \n",
+       "2  04/07/19 22:30     682 Chestnut St, Boston, MA 02215  \n",
+       "3  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  \n",
+       "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  \n",
+       "5  04/30/19 09:27     333 8th St, Los Angeles, CA 90001  "
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nan_df = all_data[all_data.isna().any(axis=1)] # googled how to find rows with NAN pandas (stackoverflow). all_data is our df\n",
+    "nan_df.head()\n",
+    "\n",
+    "all_data = all_data.dropna(how=\"all\")\n",
+    "all_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### ValueError: invalid literal for int() with base 10: 'Or' (from first three lines of code in Task 2)\n",
+    "#### Find \"Or\" and delete it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# temp_df = all_data[all_data[\"Order Date\"].str[0:2] == \"Or\"] # (Found the \"Or\"). We've set a tempoary df to proceed the filter. We're trying to index all_data on a certain condition and the condition we want is the first two characters of the above order date equals \"Or\" as this is causing our issue\n",
+    "# temp_df.head()\n",
+    "\n",
+    "all_data = all_data[all_data[\"Order Date\"].str[0:2] != \"Or\"] # (Deleted the \"Or\"). Getting ride of the duplicated column headers  "
    ]
   },
   {
@@ -183,10 +326,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "      <th>Month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>176558</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>04/19/19 08:46</td>\n",
+       "      <td>917 1st St, Dallas, TX 75001</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>176559</td>\n",
+       "      <td>Bose SoundSport Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>04/07/19 22:30</td>\n",
+       "      <td>682 Chestnut St, Boston, MA 02215</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>176560</td>\n",
+       "      <td>Google Phone</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600</td>\n",
+       "      <td>04/12/19 14:38</td>\n",
+       "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>176560</td>\n",
+       "      <td>Wired Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>04/12/19 14:38</td>\n",
+       "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>176561</td>\n",
+       "      <td>Wired Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>04/30/19 09:27</td>\n",
+       "      <td>333 8th St, Los Angeles, CA 90001</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order ID                     Product Quantity Ordered Price Each  \\\n",
+       "0   176558        USB-C Charging Cable                2      11.95   \n",
+       "2   176559  Bose SoundSport Headphones                1      99.99   \n",
+       "3   176560                Google Phone                1        600   \n",
+       "4   176560            Wired Headphones                1      11.99   \n",
+       "5   176561            Wired Headphones                1      11.99   \n",
+       "\n",
+       "       Order Date                      Purchase Address  Month  \n",
+       "0  04/19/19 08:46          917 1st St, Dallas, TX 75001      4  \n",
+       "2  04/07/19 22:30     682 Chestnut St, Boston, MA 02215      4  \n",
+       "3  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001      4  \n",
+       "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001      4  \n",
+       "5  04/30/19 09:27     333 8th St, Los Angeles, CA 90001      4  "
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_data[\"Month\"] = all_data[\"Order Date\"].str[0:2]\n",
+    "all_data[\"Month\"] = all_data[\"Month\"].astype(\"int32\")\n",
+    "all_data.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -229,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.8"
   },
   "orig_nbformat": 4
  },
