--- a/csv_notebook.ipynb
+++ b/csv_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "5  04/30/19 09:27     333 8th St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,13 +294,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### ValueError: invalid literal for int() with base 10: 'Or' (from first three lines of code in Task 2)\n",
+    "##### ValueError: invalid literal for int() with base 10: 'Or' (from first three lines of code in Task 2), so lets find \"Or\" and delete it.\n",
     "#### Find \"Or\" and delete it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "5  04/30/19 09:27     333 8th St, Los Angeles, CA 90001      4  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
