--- a/csv_notebook.ipynb
+++ b/csv_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "5  04/30/19 09:27     333 8th St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,8 +286,18 @@
     "nan_df = all_data[all_data.isna().any(axis=1)] # googled how to find rows with NAN pandas (stackoverflow). all_data is our df\n",
     "nan_df.head()\n",
     "\n",
+    "\n",
     "all_data = all_data.dropna(how=\"all\")\n",
     "all_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_data = all_data.reset_index(drop=True) # reseting the index "
    ]
   },
   {
@@ -300,14 +310,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# temp_df = all_data[all_data[\"Order Date\"].str[0:2] == \"Or\"] # (Found the \"Or\"). We've set a tempoary df to proceed the filter. We're trying to index all_data on a certain condition and the condition we want is the first two characters of the above order date equals \"Or\" as this is causing our issue\n",
+    "# temp_df = all_data[all_data[\"Order Date\"].str[0:2] == \"Or\"] # (Found the \"Or\"). We've set a temporary df to proceed the filter. We're trying to index all_data on a certain condition and the condition we want is the first two characters of the above order date equals \"Or\" as this is causing our issue\n",
     "# temp_df.head()\n",
     "\n",
     "all_data = all_data[all_data[\"Order Date\"].str[0:2] != \"Or\"] # (Deleted the \"Or\"). Getting ride of the duplicated column headers  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### TypeError: can't multiply sequence by non-int of type 'str' (in task 3), so the column \n",
+    "#### convert columns to the correct type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_data[\"Quantity Ordered\"] = pd.to_numeric(all_data[\"Quantity Ordered\"]) # Make int\n",
+    "all_data[\"Price Each\"] = pd.to_numeric(all_data[\"Price Each\"]) # Make float"
    ]
   },
   {
@@ -326,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +399,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>176559</td>\n",
        "      <td>Bose SoundSport Headphones</td>\n",
        "      <td>1</td>\n",
@@ -381,17 +409,17 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>176560</td>\n",
        "      <td>Google Phone</td>\n",
        "      <td>1</td>\n",
-       "      <td>600</td>\n",
+       "      <td>600.00</td>\n",
        "      <td>04/12/19 14:38</td>\n",
        "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>176560</td>\n",
        "      <td>Wired Headphones</td>\n",
        "      <td>1</td>\n",
@@ -401,7 +429,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>176561</td>\n",
        "      <td>Wired Headphones</td>\n",
        "      <td>1</td>\n",
@@ -415,22 +443,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  Order ID                     Product Quantity Ordered Price Each  \\\n",
-       "0   176558        USB-C Charging Cable                2      11.95   \n",
-       "2   176559  Bose SoundSport Headphones                1      99.99   \n",
-       "3   176560                Google Phone                1        600   \n",
-       "4   176560            Wired Headphones                1      11.99   \n",
-       "5   176561            Wired Headphones                1      11.99   \n",
+       "  Order ID                     Product  Quantity Ordered  Price Each  \\\n",
+       "0   176558        USB-C Charging Cable                 2       11.95   \n",
+       "1   176559  Bose SoundSport Headphones                 1       99.99   \n",
+       "2   176560                Google Phone                 1      600.00   \n",
+       "3   176560            Wired Headphones                 1       11.99   \n",
+       "4   176561            Wired Headphones                 1       11.99   \n",
        "\n",
        "       Order Date                      Purchase Address  Month  \n",
        "0  04/19/19 08:46          917 1st St, Dallas, TX 75001      4  \n",
-       "2  04/07/19 22:30     682 Chestnut St, Boston, MA 02215      4  \n",
+       "1  04/07/19 22:30     682 Chestnut St, Boston, MA 02215      4  \n",
+       "2  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001      4  \n",
        "3  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001      4  \n",
-       "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001      4  \n",
-       "5  04/30/19 09:27     333 8th St, Los Angeles, CA 90001      4  "
+       "4  04/30/19 09:27     333 8th St, Los Angeles, CA 90001      4  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,11 +470,133 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Task 3: Add a sales column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>176558</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>04/19/19 08:46</td>\n",
+       "      <td>917 1st St, Dallas, TX 75001</td>\n",
+       "      <td>4</td>\n",
+       "      <td>23.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>176559</td>\n",
+       "      <td>Bose SoundSport Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>04/07/19 22:30</td>\n",
+       "      <td>682 Chestnut St, Boston, MA 02215</td>\n",
+       "      <td>4</td>\n",
+       "      <td>99.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>176560</td>\n",
+       "      <td>Google Phone</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>04/12/19 14:38</td>\n",
+       "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
+       "      <td>4</td>\n",
+       "      <td>600.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>176560</td>\n",
+       "      <td>Wired Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>04/12/19 14:38</td>\n",
+       "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>176561</td>\n",
+       "      <td>Wired Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>04/30/19 09:27</td>\n",
+       "      <td>333 8th St, Los Angeles, CA 90001</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11.99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order ID                     Product  Quantity Ordered  Price Each  \\\n",
+       "0   176558        USB-C Charging Cable                 2       11.95   \n",
+       "1   176559  Bose SoundSport Headphones                 1       99.99   \n",
+       "2   176560                Google Phone                 1      600.00   \n",
+       "3   176560            Wired Headphones                 1       11.99   \n",
+       "4   176561            Wired Headphones                 1       11.99   \n",
+       "\n",
+       "       Order Date                      Purchase Address  Month   Sales  \n",
+       "0  04/19/19 08:46          917 1st St, Dallas, TX 75001      4   23.90  \n",
+       "1  04/07/19 22:30     682 Chestnut St, Boston, MA 02215      4   99.99  \n",
+       "2  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001      4  600.00  \n",
+       "3  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001      4   11.99  \n",
+       "4  04/30/19 09:27     333 8th St, Los Angeles, CA 90001      4   11.99  "
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_data[\"Sales\"] = all_data[\"Quantity Ordered\"] * all_data[\"Price Each\"]\n",
+    "all_data.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -459,7 +609,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Q1 - What was the best month for sales? How much was earned that month?"
+    "#### Q1 - What was the best month for sales? How much was earned that month?\n",
+    "##### key words: month and sales"
    ]
   }
  ],
