--- a/csv_notebook.ipynb
+++ b/csv_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 232,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "5  04/30/19 09:27     333 8th St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 233,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "4  04/30/19 09:27     333 8th St, Los Angeles, CA 90001      4  "
       ]
      },
-     "execution_count": 237,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "4  04/30/19 09:27     333 8th St, Los Angeles, CA 90001      4   11.99  "
       ]
      },
-     "execution_count": 238,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,6 +611,98 @@
    "source": [
     "#### Q1 - What was the best month for sales? How much was earned that month?\n",
     "##### key words: month and sales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10903</td>\n",
+       "      <td>1811768.38</td>\n",
+       "      <td>1822256.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13449</td>\n",
+       "      <td>2188884.72</td>\n",
+       "      <td>2202022.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17005</td>\n",
+       "      <td>2791207.83</td>\n",
+       "      <td>2807100.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20558</td>\n",
+       "      <td>3367671.02</td>\n",
+       "      <td>3390670.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>18667</td>\n",
+       "      <td>3135125.13</td>\n",
+       "      <td>3152606.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Quantity Ordered  Price Each       Sales\n",
+       "Month                                          \n",
+       "1                 10903  1811768.38  1822256.73\n",
+       "2                 13449  2188884.72  2202022.42\n",
+       "3                 17005  2791207.83  2807100.38\n",
+       "4                 20558  3367671.02  3390670.24\n",
+       "5                 18667  3135125.13  3152606.75"
+      ]
+     },
+     "execution_count": 299,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = all_data.groupby(\"Month\").sum()\n",
+    "result.head()"
    ]
   }
  ],
