--- a/csv_notebook.ipynb
+++ b/csv_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4  04/12/19 14:38  669 Spruce St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "5  04/30/19 09:27     333 8th St, Los Angeles, CA 90001  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,11 +310,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# temp_df = all_data[all_data[\"Order Date\"].str[0:2] == \"Or\"] # (Found the \"Or\"). We've set a temporary df to proceed the filter. We're trying to index all_data on a certain condition and the condition we want is the first two characters of the above order date equals \"Or\" as this is causing our issue\n",
+    "# temp_df = all_data[all_data[\"Order Date\"].str[0:2] == \"Or\"] # (Found the \"Or\"). We've set a temporary df to proceed the filter. We're trying to \n",
+    "# index all_data on a certain condition and the condition we want is the first two characters of the above order date equals \"Or\" as this is causing our issue\n",
     "# temp_df.head()\n",
     "\n",
     "all_data = all_data[all_data[\"Order Date\"].str[0:2] != \"Or\"] # (Deleted the \"Or\"). Getting ride of the duplicated column headers  "
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +459,7 @@
        "4  04/30/19 09:27     333 8th St, Los Angeles, CA 90001      4  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +589,7 @@
        "4  04/30/19 09:27     333 8th St, Los Angeles, CA 90001      4   11.99  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +731,7 @@
        "4   Los Angeles (CA)  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,10 +745,10 @@
     "def get_state(address):\n",
     "    return address.split(\",\")[2].split(\" \")[1]\n",
     "\n",
-    "# all_data[\"Column\"] = all_data[\"Purchase Address\"].apply(lambda x: x.split(\",\")[1]) # this is saying for every x value, so when we do .apply() we can use lamda x and basically the x value in the row is the cell content. \n",
-    "# This is saying for each content we want to split it bny commas and grab the first index.   \n",
-    "all_data[\"City\"] = all_data[\"Purchase Address\"].apply(lambda x: get_city(x) + \" (\" + get_state(x) + \")\") # whenever we do lamda x this allows us to grab the cell contents. Can also use \n",
-    "# f strings: f\"{get_city(x)} ({get_state(x)})\")\" \n",
+    "# all_data[\"Column\"] = all_data[\"Purchase Address\"].apply(lambda x: x.split(\",\")[1]) # this is saying for every x value, so when we do .apply() we can use \n",
+    "# lamda x and basically the x value in the row is the cell content. This is saying for each content we want to split it bny commas and grab the first index.   \n",
+    "all_data[\"City\"] = all_data[\"Purchase Address\"].apply(lambda x: get_city(x) + \" (\" + get_state(x) + \")\") # whenever we do lamda x this allows us to grab\n",
+    "# the cell contents. Can also use f strings: f\"{get_city(x)} ({get_state(x)})\")\" \n",
     "all_data.head()"
    ]
   },
@@ -761,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +842,7 @@
        "5                 18667  3.135125e+06  3.152607e+06"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1018,7 @@
        " Seattle (WA)                   16553  2.733296e+06  104941  2.747755e+06"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1049,8 +1050,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# cities = all_data[\"City\"].unique() # .unique() gives the unique values for a specific column \n",
-    "# using the above code has given us inconsistencies, this is because when we're showing the y data the order matters, but when we do all_data[\"City\"].unique() it orders it in a different way, \n",
-    "# so our x data and our y data are not in the same order. We need the Citys data to be in the same order as the Sales results. We do this by doing list comprehention.\n",
+    "# using the above code has given us inconsistencies, this is because when we're showing the y data the order matters, but when we do \n",
+    "# all_data[\"City\"].unique() it orders it in a different way, \n",
+    "# so our x data and our y data are not in the same order. We need the Citys data to be in the same order as the Sales results. We do \n",
+    "# this by doing list comprehention.\n",
     "# we need to two different parameters here:\n",
     "cities = [city for city, df in all_data.groupby(\"City\")]\n",
     "\n",
